refactored handleListByUsername method + bug fix